--- a/sds-client/src/styles/DashBoard.css
+++ b/sds-client/src/styles/DashBoard.css
@@ -2,9 +2,13 @@
     padding-bottom: 20px;
     background-color: rgb(245, 245, 245);
     display: flex;
+    justify-content: space-around;
 }
 
 #control-panel {
     padding-right: 10px;
+}
+
+#search-order {
 }
 
